--- a/CSS/.content.css
+++ b/CSS/.content.css
@@ -1,7 +1,6 @@
 .content {
-  max-width: 1000px;
+  max-width: 500px;
   margin: auto;
-  padding: 5px;
-  background-color: white;
+  background: white;
+  padding: 10px;
 }
-
