--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,5 @@
 body {
   display:block
-  background-image: (C:\Users\hp\Documents\SonyaSite\Images\Blue_Background.jpg);
-  background-color: #000080;
+  background-image: (JDRSite/Images/Images/Blue_Background.jpg);
   background-repeat: repeat;
 }
