--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 body {
-  display:block
+  display:block;
   background-image: (JDRSite/Images/Blue_Background.jpg);
   background-repeat: repeat;
 }
