--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,4 +2,5 @@ body {
   display:block;
   background-image: (Images/Blue_Background.jpg);
   background-repeat: repeat;
+  background-color: #000080;
 }
