--- a/CSS/content-container.css
+++ b/CSS/content-container.css
@@ -4,3 +4,9 @@ content-container {
   background: white;
   padding: 10px;
 }
+
+/* "auto" makes the left and right margins center the wrapper */
+#wrap { 
+	width: 900px; 
+	margin: 0 auto; 
+}
