--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
-body {
+#body {
   display:block;
   background-image: (Images/Blue_Background.jpg);
   background-repeat: repeat;
-  background-color: #000080;
+
 }
