--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
 body {
   display:block;
-  background-image: url(Images/Blue_Background.JPG);
+  background-image: url(https://www.pinterest.co.uk/pin/341429215494566815/);
   background-repeat: repeat;
 
 }
