--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
 body {
   display:block;
-  background-image: url(https://www.pinterest.co.uk/pin/341429215494566815/);
+  background-image: url(https://thewallpaper.co//wp-content/uploads/2016/10preview/navy-blue-backgrounds-hd-hd-wallpapers-high-definition-amazing-desktop-wallpapers-for-windows-apple-mac-tablet-download-2560x1600.jpg);
   background-repeat: repeat;
   margin:0;
   padding:0;
