--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,5 +4,8 @@ body {
   background-repeat: repeat;
   margin:0;
   padding:0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 
 }
