--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,13 @@
+/* Blue Backgroud */
+
 body {
   display:block;
   background-image: url(https://img.freepik.com/free-vector/abstract-dark-blue-polygonal-background_1035-9700.jpg?size=626&ext=jpg);
   background-repeat: repeat;
   margin:0;
   padding:0;
+  -webkit-background-size: repeat;
+  -moz-background-size: repeat;
+  -o-background-size: repeat;
+  overflow: hidden;
 }
